# dankcrypt

./: .gitignore  README.md  Untitled Diagram.drawio  main.py  pyproject.toml  sdl.py  test.py
dankcrypt/: __init__.py  character.py  engine.py  object.py
dankcrypt/assets/: mapdata.json
dankcrypt/consumables/: potions.py
dankcrypt/equippables/: armor.py  weapon.py
dankcrypt/lore/: lore.json
dankcrypt/weapons/: greatswords.py
dankcryptEngine/: CMakeLists.txt  Makefile  main.cpp  makefile
